--- a/practice.html
+++ b/practice.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>practice of JS</title>
 </head>
 <body>
-    <h1>welcome to Javascript</h1>
-    <div> Javascript </div>
+    <h1>heyy..Welcome To JAVASCRIPT</h1>
+    <span id="first" class="hiee">i'm span</span>
+    <script src="script.js"></script>
+
+    <h1> save changes </h1>
+    
 </body>
 </html>
