--- a/practice.html
+++ b/practice.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>practice of JS</title>
+    <title>Number Game</title>
 </head>
 <body>
-    <h1>heyy..Welcome To JAVASCRIPT</h1>
-    <span id="first" class="hiee">i'm span</span>
-    <script src="script.js"></script>
-
-    <h1> save changes </h1>
+    <h1>...Number game ...</h1>
     
 </body>
-<script src="evenno.js"></script>
+ <script src="numbergame.js"></script>
 </html>
