--- a/practice.html
+++ b/practice.html
@@ -10,5 +10,5 @@
     <h1>...Number game ...</h1>
     
 </body>
- <script src="numbergame.js"></script>
+ <script src="stringPractice.js"></script>
 </html>
