--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM</title>
+   <link rel="stylesheet" href="style.css">
 </head>
+
 <body> 
-    <h1>heyy...Welcome...</h1>
+   <center> <h1>DOM Practice</h1></center>
+    <p>Topic : DOM Practice </p>
+    <button>Click it !!</button>
 
 </body>
     <script src="jscript.js"></script>
