--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h4 class="cls">All set..looking good</h4>
     <h5 class="cls">Everything will be okayy</h5>
 
+    <h2>  Hello Javascript </h2>
+
 
 
     
