--- a/events.html
+++ b/events.html
@@ -7,6 +7,7 @@
     <title>Events Practice</title>
 </head>
 <body>
-    
+    <marquee><h1 style="color:yellow;">Event Practice</h1></marquee>
+    <center></centre><button onclick="alert('you clicked on button')" style="box-sizing: 50;">Click it !!</button> </center>
 </body>
 </html>
