--- a/events.html
+++ b/events.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <marquee><h1 style="color:yellow;">Event Practice</h1></marquee>
-    <center></centre><button onclick="alert('you clicked on button')" style="size: 50;">Click it !!</button> </center>
+    <center></centre><button onclick="alert('you clicked on button')" style="size: 50;">Click it !!</button> </center><br>
+    <center><button ondblclick="alert('Double Click Event Occured')"> Click 2 times !!</button></center>
 </body>
 </html>
