--- a/events.html
+++ b/events.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events Practice</title>
+ <link rel="stylesheet" href="eventscss.css"/>
 </head>
 <body>
     <marquee><h1 style="color:yellow;">Event Practice</h1></marquee>
     <center></centre><button onclick="alert('you clicked on button')" style="size: 50;">Click it !!</button> </center><br>
-    <center><button ondblclick="alert('Double Click Event Occured')"> Click 2 times !!</button></center>
+    <center><button ondblclick="alert('Double Click Event Occured')"> Click 2 times !!</button></center><br>
+
+    <center><div text aligh="center">It's a Div</div></center>
 </body>
 </html>
