--- a/events.html
+++ b/events.html
@@ -12,6 +12,6 @@
     <center></centre><button onclick="alert('you clicked on button')" style="size: 50;">Click it !!</button> </center><br>
     <center><button ondblclick="alert('Double Click Event Occured')"> Click 2 times !!</button></center><br>
 
-    <center><div text aligh="center">It's a Div</div></center>
+    <center><div onmouseover="console.log('you are inside the div')">It's a Div</div></center>
 </body>
 </html>
