--- a/events.html
+++ b/events.html
@@ -8,16 +8,14 @@
  <link rel="stylesheet" href="eventscss.css"/>
 </head>
 <body>
-    <h1>Onclick & Ondblclick events
-
-    </h1>
+    <h1>Onclick & Ondblclick events</h1>
     <marquee><h1 style="color:yellow;">Event Practice</h1></marquee>
     <center></centre><button onclick="alert('you clicked on button')" style="size: 50;">Click it !!</button> </center><br>
     <center><button ondblclick="alert('Double Click Event Occured')"> Click 2 times !!</button></center><br>
 
-    <center><div onmouseover="console.log('you are inside the div')">It's a Div</div></center>
+    <center><div onmouseover="console.log('you are inside the div')">It's a Div</div></center><br>
 
-    <button id="Mode">Change Mode</button>
+    <center><button id="mode">Change Mode</button></center>
 </body>
- <script src="eventListener.js"></script>
+ <script src="eventListener.js"> </script>
 </html>
