--- a/practice.html
+++ b/practice.html
@@ -7,8 +7,8 @@
     <title>practice</title>
 </head>
 <body>
-    <h1>...Number game ...</h1>
+    <h1></h1>
     
 </body>
- <script src="functionPractice2.js"></script>
+ <script src="syncAndAsync.js"></script>
 </html>
